force-app/main/default/objects/SalesAgreementProduct/fields/does_sa_exist__c.field-meta.xml
<CustomField>
    <fullName>does_sa_exist__c</fullName>
    <description>used by the MFG Update MFG Cloud SA and Forecasts Process</description>
    <formula>IF(NOT(ISBLANK(SalesAgreementId)) &amp;&amp; ISBLANK(SalesAgreement.Id), FALSE, TRUE)</formula>
    <label>does sa exist?</label>
    <type>Checkbox</type>
</CustomField>