force-app/main/default/objects/SalesAgreementProduct/fields/Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Line</label>
    <referenceTo>SBQQ__QuoteLine__c</referenceTo>
    <relationshipLabel>Sales Agreement Products</relationshipLabel>
    <relationshipName>Sales_Agreement_Products</relationshipName>
    <type>Lookup</type>
</CustomField>