force-app/main/default/objects/SalesAgreementProduct/fields/Shortfall__c.field-meta.xml
<CustomField>
    <fullName>Shortfall__c</fullName>
    <description>Difference between planned and actuals</description>
    <formula>TotalPlannedQuantity  -  TotalActualQuantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Difference between planned and actuals</inlineHelpText>
    <label>Shortfall</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>